--- a/examples/examples-browser/package.json
+++ b/examples/examples-browser/package.json
@@ -6,6 +6,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
-    "request": "^2.88.2"
+    "orange-pi-gpio": "*",
+    "request": "^2.88.2",
+    "ws": "^8.4.0"
   }
 }
